removed borders on aboutMe and fixed gap in responsiveness by changing parameters

--- a/src/App.css
+++ b/src/App.css
@@ -255,7 +255,7 @@
   }
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 899px) {
   body {
     margin: none;
   }
@@ -268,18 +268,17 @@
 
   
 
-  #footer {
+  /* #footer {
     background-image: url("https://i.ibb.co/dgSFNXr/bbbc491e236e0863d1e396ed78cc4836.jpg");
     height: 60px;
     width: 100%;
     bottom: 0;
     font-size: 100%;
     display: flex;
-    /* justify-content: center; */
     justify-content: flex-end;
     position: fixed;
     box-sizing: border-box;
-  }
+  } */
 
   .home {
     height: 100vh;
