--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -10,7 +10,7 @@
 
 
 
-  @media only screen and (max-width: 850px) {
+  @media only screen and (max-width: 899px) {
   .wrapper {
     height: 100vh;
     width: auto;
